
option java_outer_classname="GetNextRecordCommandProtocol";

package Alachisoft.NCache.Common.Protobuf;

message GetNextRecordCommand {

    optional int64 RequestId = 1;
	optional string IntendedRecipient = 2;

    //Pointer
    optional string ClientId = 3;
    optional string ClientIp = 4;
    optional int32 ClientPort = 5;
    optional string ClusterIp = 6;
    optional int32 ClusterPort = 7;
    optional int32 CallbackId = 8;
    optional string TaskId = 9;
}